--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="loadContent()">
 	<div class="topnav" id="topnavigationbar">
-		<a href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a><a href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a><a href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes</a><a href="#items" onclick="setTimeout(loadContent, 200);">Items</a><a href="#players" onclick="setTimeout(loadContent, 200);">Players</a><a href="#about" onclick="setTimeout(loadContent, 200);">About Us</a><a href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
+		<a href="#welcome" onclick="loadContent()">Home</a><a href="#signups" onclick="loadContent()">Sign Up</a><a href="#shop" onclick="loadContent()">Bartholomew's Shop</a><a href="#playing" onclick="loadContent()">Playing in DnDTime</a><a href="#fanart" onclick="loadContent()">Fan Art</a><a href="#heroes" onclick="loadContent()">Heroes</a><a href="#items" onclick="loadContent()">Items</a><a href="#players" onclick="loadContent()">Players</a><a href="#about" onclick="loadContent()">About Us</a><a href="#faq" onclick="loadContent()">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 	<div class="notpaper">
 		<h1>PETE AND JEREMY'S DNDTIME</h1>
@@ -18,7 +18,7 @@
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
 		<div id="DnDTimeAjaxObject">
 			<h2>Welcome to DnDTime!</h2>
-			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="setTimeout(loadContent, 200);">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
+			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="loadContent()">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="loadContent()">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
 			<div class="fabbox">
 				<div>
 					<a href="https://twitch.tv/dndtime" style="color:#6441A4"><i class="fab fa-twitch"></i></a>
