--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral+SC:700|Spectral:400,400i,600,600i" rel="stylesheet">
 </head>
-<body onload="loadContent()">
+<body onload="setTimeout(loadContent)">
 	<div class="topnav" id="topnavigationbar">
-		<a href="#welcome" onclick="loadContent()">Home</a><a href="#signups" onclick="loadContent()">Sign Up</a><a href="#shop" onclick="loadContent()">Bartholomew's Shop</a><a href="#playing" onclick="loadContent()">Playing in DnDTime</a><a href="#fanart" onclick="loadContent()">Fan Art</a><a href="#heroes" onclick="loadContent()">Heroes</a><a href="#items" onclick="loadContent()">Items</a><a href="#players" onclick="loadContent()">Players</a><a href="#about" onclick="loadContent()">About Us</a><a href="#faq" onclick="loadContent()">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
+		<a href="#welcome" onclick="setTimeout(loadContent)">Home</a><a href="#signups" onclick="setTimeout(loadContent)">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent)">Bartholomew's Shop</a><a href="#playing" onclick="setTimeout(loadContent)">Playing in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent)">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent)">Heroes</a><a href="#items" onclick="setTimeout(loadContent)">Items</a><a href="#players" onclick="setTimeout(loadContent)">Players</a><a href="#about" onclick="setTimeout(loadContent)">About Us</a><a href="#faq" onclick="setTimeout(loadContent)">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 	<div class="notpaper">
 		<h1>PETE AND JEREMY'S DNDTIME</h1>
@@ -18,7 +18,7 @@
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
 		<div id="DnDTimeAjaxObject">
 			<h2>Welcome to DnDTime!</h2>
-			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="loadContent()">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="loadContent()">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
+			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="setTimeout(loadContent)">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="setTimeout(loadContent)">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
 			<div class="fabbox">
 				<div>
 					<a href="https://twitch.tv/dndtime" style="color:#6441A4"><i class="fab fa-twitch"></i></a>
@@ -48,7 +48,7 @@
 	<div style="height:100%; width: 100px;" id="nullspace"></div>
 	<script>
 	          // Load Content
-	          function loadContent() {
+	          function setTimeout(loadContent) {
 	          	var dynamicContent = location.hash.substr(1);
 	          	var xhttp = new XMLHttpRequest();
 	          	xhttp.onreadystatechange = function() {
