--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div style="height:100%; width: 100px;" id="nullspace"></div>
 	<script>
 	          // Load Content
-	          function setTimeout(loadContent) {
+	          function loadContent {
 	          	var dynamicContent = location.hash.substr(1);
 	          	var xhttp = new XMLHttpRequest();
 	          	xhttp.onreadystatechange = function() {
