--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="setTimeout(loadContent)">
 	<div class="topnav" id="topnavigationbar">
-		<a href="#welcome" onclick="setTimeout(loadContent)">Home</a><a href="#signups" onclick="setTimeout(loadContent)">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent)">Bartholomew's Shop</a><a href="#playing" onclick="setTimeout(loadContent)">Playing in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent)">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent)">Heroes</a><a href="#items" onclick="setTimeout(loadContent)">Items</a><a href="#players" onclick="setTimeout(loadContent)">Players</a><a href="#about" onclick="setTimeout(loadContent)">About Us</a><a href="#faq" onclick="setTimeout(loadContent)">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
+		<a href="#welcome">Home</a><a href="#signups">Sign Up</a><a href="#shop">Bartholomew's Shop</a><a href="#playing">Playing in DnDTime</a><a href="#fanart">Fan Art</a><a href="#heroes">Heroes</a><a href="#items">Items</a><a href="#players">Players</a><a href="#about">About Us</a><a href="#faq">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 	<div class="notpaper">
 		<h1>PETE AND JEREMY'S DNDTIME</h1>
@@ -18,7 +18,7 @@
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
 		<div id="DnDTimeAjaxObject">
 			<h2>Welcome to DnDTime!</h2>
-			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="setTimeout(loadContent)">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="setTimeout(loadContent)">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
+			<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing">Playing in DnDTime</a> to learn more about the game, then <a href="#signups">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
 			<div class="fabbox">
 				<div>
 					<a href="https://twitch.tv/dndtime" style="color:#6441A4"><i class="fab fa-twitch"></i></a>
