--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	          	xhttp.open("GET", dynamicContent + ".txt", true);
 	          	xhttp.send();
 	          }
-		window.addEventListener('hashchange', loadContent());
+		window.addEventListener('hashchange', loadContent);
 	          // Navbar FunctionS
 	          function navFunction() {
 	          	var x = document.getElementById("topnavigationbar");
