--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral+SC:700|Spectral:400,400i,600,600i" rel="stylesheet">
 </head>
-<body>
+<body onload="loadContent();">
 	<div class="topnav" id="topnavigationbar">
 		<a href="#welcome">Home</a><a href="#signups">Sign Up</a><a href="#shop">Bartholomew's Shop</a><a href="#playing">Playing in DnDTime</a><a href="#fanart">Fan Art</a><a href="#heroes">Heroes</a><a href="#items">Items</a><a href="#players">Players</a><a href="#about">About Us</a><a href="#faq">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
